--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,5 +7,11 @@
 @import "components/footer";
 @import "components/timer";
 @import "components/upcoming-list";
+@import "components/upcoming-launches";
+@import "components/past-launches";
+@import "components/about";
+@import "components/history";
+@import "components/missions";
+@import "components/contact";
 
 //pagestyles
