--- a/sass/components/_nav.scss
+++ b/sass/components/_nav.scss
@@ -1,38 +1,84 @@
 .nav {
   z-index: 999;
-  font-family: $headline;
-  padding: $contentpadding;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-wrap: wrap;
   position: fixed;
   background-color: $primary;
   width: 100%;
+  box-shadow: $boxshadow;
+  &__inner {
+    flex-wrap: wrap;
+    font-family: $headline;
+    padding: $contentpadding;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 1600px;
+    margin-left: auto;
+    margin-right: auto;
+  }
   &__burger {
     margin: 0px;
     padding: 0px;
     border: 0px;
     height: 30px;
+    width: 30px;
+    margin-right: $contentpadding/2;
+
     background-color: transparent;
+    color: $white;
+    font-family: $subheadline;
+    font-size: 0.9em;
+    cursor: pointer;
+    &-line1 {
+      transition: 200ms;
+      height: 4px;
+      display: block;
+      width: 100%;
+      background-color: $white;
+      &--active {
+        transform: rotate(-45deg) translate(-8px, 8px);
+      }
+    }
+    &-line2 {
+      transition: 200ms;
+      height: 4px;
+      display: block;
+      width: 100%;
+      background-color: $white;
+      margin: $contentpadding/2;
+      &--active {
+        opacity: 0;
+      }
+    }
+    &-line3 {
+      transition: 200ms;
+      height: 4px;
+      display: block;
+      width: 100%;
+      background-color: $white;
+      &--active {
+        transform: rotate(45deg) translate(-8px, -8px);
+      }
+    }
   }
 
   &__logo--link {
     color: $white;
     text-decoration: none;
     font-size: 1.7em;
+    font-style: italic;
+    letter-spacing: 1px;
   }
   &__logo--yellow {
     color: $secondary;
   }
   &__list {
-    transition: transform 0.4s ease-in;
+    transition: transform 0.2s ease-in;
     overflow: hidden;
     display: flex;
     flex-direction: column;
-    transform: translateX(100%);
+    transform: scale(0);
     position: fixed;
-    top: 76px;
+    top: 72px;
     padding: 0px;
     list-style: none;
     margin: 0px;
@@ -40,25 +86,71 @@
     background-color: $primary;
     visibility: hidden;
     text-align: center;
-    min-height: calc(100vh - 1.25rem);
-    justify-content: space-between;
+    width: 100%;
+    min-height: calc(100% - 72px);
+    justify-content: space-around;
   }
   &__list--open {
-    transform: translateX(0%);
+    transform: scale(1);
     visibility: visible;
     right: 0;
   }
   &__item {
-    padding: $contentpadding/2;
+    padding: $contentpadding;
   }
   &__link {
     color: $white;
     text-decoration: none;
+    letter-spacing: 1px;
   }
   &__link:hover {
     color: $secondary;
   }
-  &__link:active {
+  &__link:focus {
     color: $secondary;
+  }
+}
+
+@media screen and (min-width: 500px) {
+  .nav {
+    &__list {
+      transform: translateX(100%);
+      width: 350px;
+      &--open {
+        transform: translateX(0%);
+        visibility: visible;
+        right: 0;
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 1000px) {
+  .nav {
+    &__list {
+      transition: inherit;
+      visibility: visible;
+      flex-direction: row;
+      transform: inherit;
+      top: inherit;
+      display: inherit;
+      min-height: inherit;
+      position: inherit;
+      width: 80%;
+      max-width: 1200px;
+      justify-content: space-between;
+      &--end {
+        display: none;
+      }
+    }
+    &__burger {
+      display: none;
+    }
+    &__item {
+      padding: 0px;
+    }
+    &__link {
+      transition: 200ms;
+    }
   }
 }
